# Ogos

./: .gitignore  Cargo.toml  README.md  REFERENCE.md  THIRD-PARTY-LICENSES.html
crates/ogos/: Cargo.toml  build.rs
crates/ogos/src/: main.rs
crates/ogos_audio/src/: lib.rs
crates/ogos_common/: Cargo.toml
crates/ogos_common/src/: binds.rs  display.rs  lib.rs  window_shift.rs
crates/ogos_config/: Cargo.toml
crates/ogos_config/src/: lib.rs
crates/ogos_core/: Cargo.toml
crates/ogos_core/src/: lib.rs
crates/ogos_discord/src/: lib.rs
crates/ogos_display/: Cargo.toml
crates/ogos_display/src/: lib.rs
crates/ogos_err/: Cargo.toml
crates/ogos_err/src/: lib.rs
crates/ogos_gui/: Cargo.toml
crates/ogos_gui/src/: lib.rs
crates/ogos_lib/: Cargo.toml
crates/ogos_lib/src/: binds.rs  cli.rs  config_watch.rs  games.rs  lib.rs  pipe_server.rs  tray.rs  win32.rs  window_foreground.rs  window_shift.rs  window_watch.rs
crates/ogos_mki/: Cargo.toml
crates/ogos_mki/src/: details.rs  keyboard.rs  lib.rs  mouse.rs
crates/ogos_mki/src/windows/: keyboard.rs  mod.rs  mouse.rs
crates/ogos_video/: Cargo.toml
crates/ogos_video/src/: lib.rs
docs/: REFERENCE.md
ogos/: Cargo.toml
ogos/src/: main.rs
ogos_audio/: Cargo.toml
ogos_audio/src/: lib.rs
ogos_binds/: Cargo.toml
ogos_binds/src/: lib.rs
ogos_cdylib/: Cargo.toml
ogos_cdylib/src/: lib.rs  taskbar.rs
ogos_common/: Cargo.toml
ogos_common/src/: binds.rs  display.rs  lib.rs  window_foreground.rs
ogos_config/: Cargo.toml
ogos_config/src/: lib.rs
ogos_core/: Cargo.toml
ogos_core/src/: lib.rs
ogos_discord/: Cargo.toml
ogos_discord/src/: lib.rs
ogos_display/: Cargo.toml
ogos_display/src/: lib.rs
ogos_err/: Cargo.toml
ogos_err/src/: lib.rs
ogos_gui/src/: lib.rs
ogos_lib/: Cargo.toml  llvm-lines.txt
ogos_lib/src/: audio.rs  binds.rs  cli.rs  common.rs  config.rs  config_watch.rs  cursor_watch.rs  discord.rs  display.rs  err.rs  games.rs  gui.rs  lib.rs  nvapi_shadow.rs  pipe_client.rs  pipe_server.rs  video.rs  win32.rs  window_foreground.rs  window_shift.rs  window_watch.rs
ogos_mki/: Cargo.toml
ogos_mki/examples/: readme.rs  test.rs
ogos_mki/src/: details.rs  keyboard.rs  lib.rs  mouse.rs  parse.rs  sequence.rs
ogos_mki/src/windows/: keyboard.rs  mod.rs  mouse.rs
ogos_proc_macros/: Cargo.toml
ogos_proc_macros/src/: lib.rs
ogos_video/src/: lib.rs
ogos_window_foreground/: Cargo.toml
ogos_window_foreground/src/: lib.rs
ogos_window_shift/: Cargo.toml
ogos_window_shift/src/: lib.rs
