[package]
name = "ogos"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
build = "build.rs"

[dependencies]
ogos_lib = { path = "../ogos_lib" }

[build-dependencies]
winres = "0.1"

[features]
dbg_console = []

[package.metadata.about]
ignore = true
