[package]
name = "ogos_audio"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
com-policy-config = { workspace = true }
log = { workspace = true }
ogos_common = { workspace = true }
ogos_config = { workspace = true }
ogos_err = { workspace = true }
windows_061 = { workspace = true }
