[package]
name = "ogos_binds"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
const_format = { workspace = true }
ogos_err = { workspace = true }
ogos_mki = { workspace = true }
serde = { workspace = true }
