[package]
name = "ogos_cdylib"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
name = "ogos_hook"
crate-type = ["cdylib"]

[dependencies]
ogos_lib = { path = "../ogos_lib" }
log = { workspace = true }
simplelog = { workspace = true }
windows = { workspace = true }
