[package]
name = "ogos_discord"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
concat-string = { workspace = true }
discord-rich-presence = { workspace = true }
log = { workspace = true }
ogos_common = { workspace = true }
ogos_config = { workspace = true }
ogos_core = { workspace = true }
ogos_err = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
windows = { workspace = true }
