[package]
name = "ogos_display"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
ogos_binds = { workspace = true }
ogos_err = { workspace = true }
nvapi-sys = { workspace = true }
nvapi_sys_new = "=0.1.5"
serde = { workspace = true }
