[package]
name = "ogos_lib"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.92"
argfile = "0.1.5"
bincode = "1.3.3"
bitflags = "2.9.1"
castaway = "0.2.2"
cfg-if = "1.0.3"
clap = { version = "4.3.0", features = ["derive"] }
com-policy-config = "0.5.0"
concat-string = "1.0.1"
const_format = "0.2.34"
ddc-hi = "0.4.1"
discord-rich-presence = "0.2.5"
eframe = { version = "0.28.1", features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
ffprobe = "0.4.0"
fraction = "0.15.3"
json5 = "0.4.1"
log = { workspace = true }
log-panics = { workspace = true }
mki = { path = "../../mki-rust" }
netcorehost = "=0.18.0"
nvapi-sys = "0.1.3"
nvapi_sys_new = "=0.1.5"
ogos_proc_macros = { path = "../ogos_proc_macros" }
once_cell = "1.19.0"
opener = "0.7.2"
qmk-via-api = { path = "../../qmk-via-api" }
quick-xml = "0.37.1"
rand = "0.8.5"
rust-ini = "0.21.1"
serde = "1.0.204"
serde_json = "1.0.121"
simplelog = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
subenum = "1.1.2"
sysinfo = "0.29.0"
thiserror = "1.0.60"
tokio = { version = "1.46.1", features = ["full"] }
which = "6.0.1"
widestring = "1.2.0"
windows = { workspace = true }
windows_052 = { workspace = true }
wmi = "0.13.3"

[features]
bug_hunting_cpu_sets = []
bug_hunting_screen_extent = []
bug_hunting_taskbar_window_pos_changing = []
bug_hunting_taskbar_win_events = []
bug_hunting_taskbar_win_events_all_foreground = []
bug_hunting_taskbar_win_messages = []
bug_hunting_window_shift_destroy = []
bug_hunting_window_watch_win_events = []
dbg_console = []
dbg_window_info = []
dbg_window_shift_delta = []
