[package]
name = "ogos_lib"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
argfile = "0.2.1"
bincode = { workspace = true }
bitflags = "2.9.1"
blake3 = { version = "1.8.2", default-features = false }
cfg-if = "1.0.3"
clap = { workspace = true }
com-policy-config = "0.6.0"
concat-string = "1.0.1"
const_format = { version = "0.2.34", default-features = false }
ddc = "0.2.2"
ddc-winapi = "0.2.2"
discord-rich-presence = { workspace = true }
eframe = { workspace = true }
egui = { version = "0.33.0", default-features = false, features = ["serde"] }
egui_extras = { version = "0.33.0", default-features = false }
hidapi = { version = "*", default-features = false, features = ["windows-native"] }
image = { workspace = true }
indexmap = { version = "2.12.1", features = ["serde"] }
log = { workspace = true }
log-panics = { workspace = true }
netcorehost = { workspace = true }
nvapi_sys_new = "=0.1.5"
nvapi-sys = { workspace = true }
ogos_core = { workspace = true }
ogos_err = { path = "../ogos_err" }
ogos_mki = { workspace = true }
ogos_proc_macros = { workspace = true }
once_cell = "1.19.0"
opener = { workspace = true }
paste = "1.0.15"
qmk-via-api = { workspace = true }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
rayon = { workspace = true }
resize = { workspace = true }
rgb = "0.8.52"
ron = { workspace = true }
rust-ini = { workspace = true }
serde = { version = "1.0.204", default-features = false, features = ["rc"] }
serde_json = { workspace = true }
simplelog = { workspace = true }
strum = { workspace = true }
subenum = { version = "1.1.2", default-features = false }
sysinfo = { version = "0.37.2", default-features = false, features = ["multithread", "system"] }
tokio = { workspace = true }
wgpu = { version = "27.0.1", features = ["dx12"] }
which = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true }
windows_061 = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["hidapi"]

[features]
dbg_console = []
dbg_cpu_sets = []
dbg_cursor_watch = []
dbg_window_info = []
dbg_window_shift_delta = []
dbg_window_shift_destroy = []
dbg_window_watch_win_events = []
