[package]
name = "ogos_lib"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
argfile = "0.2.1"
bincode = { workspace = true }
bitflags = "2.9.1"
cfg-if = "1.0.3"
clap = { workspace = true }
concat-string = { workspace = true }
const_format = { workspace = true }
discord-rich-presence = { workspace = true }
hidapi = { version = "*", default-features = false, features = ["windows-native"] }
log = { workspace = true }
log-panics = "2.1.0"
netcorehost = { workspace = true }
ogos_audio = { workspace = true }
ogos_common = { workspace = true }
ogos_config = { workspace = true }
ogos_core = { workspace = true }
ogos_discord = { workspace = true }
ogos_display = { workspace = true }
ogos_err = { workspace = true }
ogos_gui = { path = "../ogos_gui" }
ogos_mki = { workspace = true }
ogos_video = { workspace = true }
qmk-via-api = { workspace = true }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
strum = { workspace = true }
subenum = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
windows = { workspace = true }
windows_061 = { workspace = true }

mki = { version = "0.2.3", optional = true }

[package.metadata.cargo-shear]
ignored = ["hidapi", "windows"]

[features]
about = ["mki"]
dbg_console = []
dbg_cpu_sets = []
dbg_cursor_watch = []
dbg_window_info = []
dbg_window_shift_delta = []
dbg_window_shift_destroy = []
dbg_window_watch_win_events = []
