[package]
name = "ogos_mki"
authors = ["fulara <ntszar@gmail.com> (original author)"]
license = "MIT"
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
lazy_static = "1"
libc = "0.2"
log = { workspace = true }
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"

[lib]
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
input = "0.7"
nix = "0.24"
uinput = { version = "0.1.3", default-features = false }
x11 = { version = "2", features = ["xlib", "xtest"] }
