[package]
name = "ogos_proc_macros"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
name = "ogos_proc_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.101", default-features = false }
