[package]
name = "ogos_common"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
const_format = { workspace = true }
log = { workspace = true }
nvapi_sys_new = { workspace = true }
mime_guess = "2.0.5"
ogos_core = { workspace = true }
ogos_err = { workspace = true }
ogos_mki = { workspace = true }
paste = "1.0.15"
serde = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true }
