[package]
name = "ogos_config"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
const_format = { workspace = true }
eframe = { workspace = true }
discord-rich-presence = { workspace = true }
ogos_common = { workspace = true }
ogos_core = { workspace = true }
ogos_err = { workspace = true }
ogos_mki = { workspace = true }
once_cell = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
