[package]
name = "ogos_gui"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
blake3 = { version = "1.8.2", default-features = false }
concat-string = { workspace = true }
crossbeam = "0.8.4"
discord-rich-presence = { workspace = true }
eframe = { workspace = true }
egui = { version = "0.33.0", default-features = false, features = ["serde"] }
egui_extras = { version = "0.33.0", default-features = false }
hotpath = { workspace = true }
image = { workspace = true }
indexmap = { version = "2.12.1", features = ["serde"] }
log = { workspace = true }
ogos_common = { workspace = true }
ogos_config = { workspace = true }
ogos_core = { workspace = true }
ogos_discord = { workspace = true }
ogos_err = { workspace = true }
ogos_video = { workspace = true }
range-compare = "0.1.1"
raw-window-handle = "0.6.2"
rayon = { workspace = true }
resize = { workspace = true }
rfd = "0.17.2"
rgb = "0.8.52"
serde = { workspace = true }
serde_json = { workspace = true }
tap = "1.0.1"
tokio = { workspace = true }
wgpu = { version = "27.0.1", features = ["dx12"] }
windows = { workspace = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
