[package]
name = "ogos_mki"
authors = ["fulara <ntszar@gmail.com> (original author)"]
license = "MIT"
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = "1"
log = { workspace = true }
winapi = { version = "0.3.9", features = ["processthreadsapi", "winuser"] }
